--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+
+2003-05-31  Dafydd Harries <daf@parnassus.ath.cx>
+
+	* cy.po: Welsh translation corrections.
+
 2003-05-30  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
 	* cy.po: Updated Welsh translation from
