--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>
+
+	* configure.in: Added "li" (Limburgish) to ALL_LINGUAS.
+
 2003-05-26  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
 	* configure.in: Added "cy" to ALL_LINGUAS
