--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2003-06-03  Mathieu van Woerkom  <mathieu@brabants.org>
+
+	* li.po: Added Limburgish translation
 
 2003-05-31  Dafydd Harries <daf@parnassus.ath.cx>
 
