Added Norwegian translation.
2003-06-03  Kjartan Maraas  <kmaraas@gnome.org>

	* l10n.xml: Added Norwegian translation.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-03  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* l10n.xml: Added Norwegian translation.
+	
 2003-03-16  Andras Timar  <timar@gnome.hu>
 
 	* l10n.xml: Added Hungarian translation.
