--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-03  Mikael Hallendal  <micke@codefactory.se>
 
+        * src/yelp-window.c: (window_about_cb): 
+	- If About window is already showing, don't create another one.
+	  Patch by Steve Chaplin, fixes #113906
+
+2003-06-03  Mikael Hallendal  <micke@codefactory.se>
+
 	* src/yelp-view-content.c: (content_reader_finished_cb):
 	- Use gtp_tree_view_expand_to_path to expand the tree instead of callin
 	  gtk_tree_view_expand_path on all parents. Fixes #113977
