Update NEWS and bump version

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,38 @@
+Changes in 2.2.1:
+-----------------
+
+* Fix leaks (Mikael, Narayana Pattipati, Kjartan)
+  Fixes bug #110572
+
+* Don't show about window more than once (Steve Chaplin)
+  Fixes bug #113906
+
+* Fix issues with hangs in the TOC (Mikael, Narayana Pattipati)
+
+* Updated translations
+  (az, be, bn, eo, fa, ga, he, id, is, it, kn, 
+   ml, mn, nl, pt, sr, sr@latn, th, zh_TW)	(Abel Cheung,
+						 Alessio Frusciante,
+						 Christian Rose,
+						 Danilo Segan,
+						 Dmitry G. Mastrukov,
+						 FSF-India,
+						 Gil Osher,
+						 Joel Brich,
+						 Metin Amiroff,
+						 Mohammad Damt,
+						 Mujahidul Islam,
+						 Paisa Seeluangsawat,
+						 Paul Duffy,
+						 Pramod,
+						 Roozbeh Pournader,
+						 Samuel Jon Gunnarson,
+						 Taneem Ahmed,
+						 Vincent van Adrighem,
+						 
+						 
+						 
+
 Changes in 2.2.0:
 -----------------
 
