--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2003-06-04  Mikael Hallendal  <micke@codefactory.se>
 
-	* src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
+        * configure.in: Updated to 2.3.3
+	
+	* NEWS: Updated for 2.3.3
+
+        * src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
 	- fixed leak found by Kjartan.
 
 	* src/yelp-reader.c: 
