--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,18 @@
-Changes in 2.3.0:
+Changes in 2.3.3:
 -----------------
+* About window fixes                            (Alex Duggan, Steven Chaplin)
+* Memory leak fixes                             (Narayana Pattipati,
+                                                 Mikael Hallendal,
+						 Kjartan Maraas)
+* Expand the contents tree correctly            (Narayana Pattipati, 
+                                                 Mikael Hallendal)
+* New translations
+  (bn, ga, sr, cy, li)
+* Updated translations
+  (ja, zh_TW, sv, cs, he, sq, ga, fr, es, de, ca, ms, pt, da, be, nl)
 
+Changes in 2.3.0: 
+-----------------
 * Lots of updates to the stylesheets
 * Removed support for gtkthml1 (no CSS)
 * Removed the 'gman' symlink (#103750)
@@ -12,7 +24,6 @@ Changes in 2.3.0:
 
 Changes in 2.2.0:
 -----------------
-
 * Updated translations
   (hi, he, vi, de)                              (Christian Neumair,
                                                  Pablo Saratxaga,
@@ -22,7 +33,6 @@ Changes in 2.2.0:
 
 Changes in 2.1.5:
 -----------------
-
 * Stylesheet fixes                              (Padraig O'Briain)
 * Hide unimplemented search options             (Richard Hult)
 * Updated translations 
@@ -30,13 +40,11 @@ Changes in 2.1.5:
 
 Changes in 2.1.4:
 -----------------
-
 * Updated translations 
   (am, bg, ca, el, es, ja, lv, no, pl, pt_BR, sk, wa)
 
 Changes in 2.1.3:
 -----------------
-
 * Multihead fix                                 (Mark McLoughlin)
 * Updated translations 
   (be, fr, hu, da, nl, am, de, fr, sq,
