--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-06-04  Mikael Hallendal  <micke@codefactory.se>
 
+        * Release 2.3.3
+
         * configure.in: Updated to 2.3.3
 	
 	* NEWS: Updated for 2.3.3
