--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-04  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-05-13  Abel Cheung  <maddog@linux.org.hk>
 
 	* POTFILES.skip: Remove non-existant file(s).
