Global fix of tamil translation encoding

--- a/po/ta.po
+++ b/po/ta.po
@@ -20,39 +20,39 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>þù×¨Ã¨Â ¬Å½ò¾¢ø ¸ñÎÀ¢Ê:</b>"
+msgstr "<b>இவ்வுரையை ஆவணத்தில் கண்டுபிடி:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr "¾É¢Âì¸¾¡¸ wrap ¦ºö"
+msgstr "தனியக்கதாக wrap செய்"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "ºÃõ ¸ñÎÀ¢Êì¸×õ..."
+msgstr "சரம் கண்டுபிடிக்கவும்..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr "ÓØ ¦º¡ø¨ÄÔõ ºÁÁ¡ìÌ"
+msgstr "முழு சொல்லையும் சமமாக்கு"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr "§Áø/¸£ú Å¨¸¨Â ºÁÁ¡ìÌ"
+msgstr "மேல்/கீழ் வகையை சமமாக்கு"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr "_«ÎòÐ"
+msgstr "_அடுத்து"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr "_Óý"
+msgstr "_முன்"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "¦Âøô"
+msgstr "யெல்ப்"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "¦Âøô ¦¾¡Æ¢üº¡¨Ä"
+msgstr "யெல்ப் தொழிற்சாலை"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
@@ -61,11 +61,11 @@ msgstr ""
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "¦Âøô ¦ºÂüÀÎò¾ ÓÊÂÅ¢ø¨Ä: '%s'"
+msgstr "யெல்ப் செயற்படுத்த முடியவில்லை: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Ò¾¢Â º¡ÇÃò¨¾ ¾¢Èì¸ÓÊÂÅ¢ø¨Ä."
+msgstr "புதிய சாளரத்தை திறக்கமுடியவில்லை."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -98,209 +98,209 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "«¨ÁôÒ «¨ÆôÒ¸û"
+msgstr "அமைப்பு அழைப்புகள்"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "áÄ¸î ¦ºÂø¸û"
+msgstr "நூலகச் செயல்கள்"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "¸Õ ¿¨¼Ó¨È¸û"
+msgstr "கரு நடைமுறைகள்"
 
 #: src/yelp-man.c:429
 msgid "Applications"
-msgstr "¦ºÂøÀ¡Î¸û"
+msgstr "செயல்பாடுகள்"
 
 #: src/yelp-man.c:434
 msgid "Development"
-msgstr "¯ÕÅ¡ì¸õ"
+msgstr "உருவாக்கம்"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Åý¦À¡Õû º¡¾Éí¸û"
+msgstr "வன்பொருள் சாதனங்கள்"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "«¨ÁÅÊÅ §¸¡ôÒ¸û"
+msgstr "அமைவடிவ கோப்புகள்"
 
 #: src/yelp-man.c:449
 msgid "Games"
-msgstr "Å¢¨ÇÂ¡ðÎ¸û"
+msgstr "விளையாட்டுகள்"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr "¦À¡Ð¨ÁÂ¡É¨Å"
+msgstr "பொதுமையானவை"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "«¨ÁôÒ ¿¢÷Å¡¸õ"
+msgstr "அமைப்பு நிர்வாகம்"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr "²üÈôÀÎ¸¢ýÈÐ..."
+msgstr "ஏற்றப்படுகின்றது..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517
 msgid "Section"
-msgstr "À¢Ã¢×"
+msgstr "பிரிவு"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "_þ¾ð¸¡¸ §¾Î:"
+msgstr "_இதட்காக தேடு:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
 msgid "Help Contents"
-msgstr "¯¾Å¢ ¯ûÇ¼ì¸í¸û"
+msgstr "உதவி உள்ளடக்கங்கள்"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "¸§É¡õ - ¸½¢§Á¨º"
+msgstr "கனோம் - கணிமேசை"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
-msgstr "ÁüÈ/§ÅÚ ¬Å½í¸û"
+msgstr "மற்ற/வேறு ஆவணங்கள்"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr "¯¾Å¢ô Àì¸¹¸û"
+msgstr "உதவிப் பக்கஙகள்"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
 msgid "Info Pages"
-msgstr "¾¸Åø Àì¸¹¸û"
+msgstr "தகவல் பக்கஙகள்"
 
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
 msgid "Documents"
-msgstr "¬Å½í¸û"
+msgstr "ஆவணங்கள்"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
-msgstr "Å¨¸Â¢Éí¸û"
+msgstr "வகையினங்கள்"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
-msgstr "¯¾Å¢ô Àì¸¹¸û"
+msgstr "உதவிப் பக்கஙகள்"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
-msgstr "¸§É¡õ"
+msgstr "கனோம்"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr "þÄÅº ¦Áý¦À¡Õû"
+msgstr "இலவச மென்பொருள்"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr "(À)"
+msgstr "(ப)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
-msgstr "/_§¸¡ôÒ"
+msgstr "/_கோப்பு"
 
 #: src/yelp-window.c:164
 msgid "/File/_New window"
-msgstr "/§¸¡ôÒ/Ò¾¢Â º¡ÇÃõ"
+msgstr "/கோப்பு/புதிய சாளரம்"
 
 #: src/yelp-window.c:165
 msgid "/File/_Close window"
-msgstr "/§¸¡ôÒ/º¡ÇÃò¨¾ ãÎ¸"
+msgstr "/கோப்பு/சாளரத்தை மூடுக"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr "/_¦¾¡Ì"
+msgstr "/_தொகு"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr "/¦¾¡Ì/þôÀì¸ò¾¢ø ¸ñÎÀ¢Ê..."
+msgstr "/தொகு/இப்பக்கத்தில் கண்டுபிடி..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr "/¦¾¡Ì/ÁÚÀÊÔõ ¸ñÎÀ¢Ê"
+msgstr "/தொகு/மறுபடியும் கண்டுபிடி"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
-msgstr "/_§À¡"
+msgstr "/_போ"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr "/§À¡/À¢ý¦ºø"
+msgstr "/போ/பின்செல்"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr "/§À¡/Óý¦ºø"
+msgstr "/போ/முன்செல்"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr "/§À¡/_þøÄõ"
+msgstr "/போ/_இல்லம்"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/Go/_ÍðÎ"
+msgstr "/Go/_சுட்டு"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
-msgstr "/_¯¾Å¢"
+msgstr "/_உதவி"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/¯¾Å¢/_ÀüÈ¢"
+msgstr "/உதவி/_பற்றி"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
-msgstr "¯¾Å¢ §Á§Ä¡Ê"
+msgstr "உதவி மேலோடி"
 
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "'%s' ¬Å½õ þø¨Ä. ¸¢¨¼Â¡Ð."
+msgstr "'%s' ஆவணம் இல்லை. கிடையாது."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:677
 msgid "translator_credits"
-msgstr "¦Á¡Æ¢¦ÀÂ÷ôÀ÷ ÀüÚ"
+msgstr "மொழிபெயர்ப்பர் பற்று"
 
 #: src/yelp-window.c:681
 #, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "¸§É¡õ 2.0 ì¸¡É ¯¾Å¢ §Á§Ä¡Ê"
+msgstr "கனோம் 2.0 க்கான உதவி மேலோடி"
 
 #: src/yelp-window.c:795
 msgid "Back"
-msgstr "À¢ý"
+msgstr "பின்"
 
 #: src/yelp-window.c:796
 msgid "Show previous page in history"
-msgstr "ÅÃÄ¡È¢ø Óý ¸¡ñÀ¢ò¾ Àì¸ò¾¢üÌô §À¡¸×õ"
+msgstr "வரலாறில் முன் காண்பித்த பக்கத்திற்குப் போகவும்"
 
 #: src/yelp-window.c:807
 msgid "Forward"
-msgstr "Óý"
+msgstr "முன்"
 
 #: src/yelp-window.c:808
 msgid "Show next page in history"
-msgstr "ÅÃÄ¡È¢ø «Îò¾ Àì¸ò¾¢üÌô §À¡¸×õ"
+msgstr "வரலாறில் அடுத்த பக்கத்திற்குப் போகவும்"
 
 #: src/yelp-window.c:821
 msgid "Home"
-msgstr "­øÄõ"
+msgstr "இல்லம்"
 
 #: src/yelp-window.c:822
 msgid "Go to home view"
-msgstr "þøÄõ ¸¡ðº¢ìÌ §À¡"
+msgstr "இல்லம் காட்சிக்கு போ"
 
 #: src/yelp-window.c:832
 msgid "Index"
-msgstr "ÍðÎ"
+msgstr "சுட்டு"
 
 #: src/yelp-window.c:833
 msgid "Search in the index"
-msgstr "ÍðÊÂ¢ø §¾Î¸"
+msgstr "சுட்டியில் தேடுக"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "¸§É¡¨Áô ÀüÈ¢ ¯¾Å¢ ¦ÀÚ"
+msgstr "கனோமைப் பற்றி உதவி பெறு"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "¯¾Å¢"
+msgstr "உதவி"
