- Reverted string change reported by Christian Rose. SORRY!
2003-06-05  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: (window_about_cb):
	- Reverted string change reported by Christian Rose. SORRY!

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-05  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c: (window_about_cb): 
+	- Reverted string change reported by Christian Rose. SORRY!
+
 2003-06-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
