--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-05  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated.
+
 2003-06-05  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
