Dutch translation updated.
2003-06-06  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated.

--- a/po/nl.po
+++ b/po/nl.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2003-06-05 11:39+0200\n"
-"PO-Revision-Date: 2003-06-05 20:25+0100\n"
+"POT-Creation-Date: 2003-06-06 11:40+0200\n"
+"PO-Revision-Date: 2003-06-06 14:37+0100\n"
 "Last-Translator: Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -259,8 +259,8 @@ msgstr ""
 "Ronald Hummelink ronald@hummelink.xs4all.nl"
 
 #: src/yelp-window.c:681
-msgid "A Help Browser for GNOME"
-msgstr "Hulpweergave voor GNOME"
+msgid "Help Browser for GNOME 2.0"
+msgstr "Hulpweergave voor GNOME 2.0"
 
 #: src/yelp-window.c:796
 msgid "Back"
