--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changes in 2.2.2:
+-----------------
+
+* Revert accidental string change in a previous fix.
+
+* Update translations
+  (fr, nl)
+						(Christophe Merlet
+						 Vincent van Adrighem)
+
 Changes in 2.2.1:
 -----------------
 
