--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-06  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation, again.
+
 2003-06-06  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated.
