Updated Spanish translation by Juan Manuel García Molina
2003-06-06  Pablo Gonzalo del Campo <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation by
                 Juan Manuel García Molina <juanma_gm@wanadoo.es>.

--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-08 18:00+0200\n"
+"PO-Revision-Date: 2003-06-06 16:20+0200\n"
 "Last-Translator: Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -264,9 +264,8 @@ msgstr ""
 "Germán Poo Caamaño <gpoo@ubiobio.cl>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Navegador de ayuda para GNOME 2.0"
+msgstr "Navegador de ayuda para GNOME"
 
 #: src/yelp-window.c:795
 msgid "Back"
@@ -307,3 +306,4 @@ msgstr "Obtener ayuda con GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ayuda"
+
