--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-06  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
+                                                                                                                                                            
+        * es.po: Updated Spanish translation by
+                 Juan Manuel García Molina <juanma_gm@wanadoo.es>.
+
 2003-06-04  Abel Cheung  <maddog@linux.org.hk>
 
 	* ta.po: Fix broken encoding.
