--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po: Updated Icelandic translation
+
 2003-06-06  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
                                                                                                                                                             
         * es.po: Updated Spanish translation by
