src/Makefile.am src/yelp-db2html.c src/yelp-scrollkeeper.c
2003-06-10 John Fleck <jfleck@inkstain.net>

	* src/Makefile.am
	* src/yelp-db2html.c
	* src/yelp-scrollkeeper.c
	* stylesheets/Makefile.am
	* stylesheets/yelp-custom.xsl
	* stylesheets/yelp-customization.xsl
	added
	* stylesheets/yelp-functions.xsl
	patch from Shaun McCance to address bug #114117

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-06-10 John Fleck <jfleck@inkstain.net>
+
+	* src/Makefile.am
+	* src/yelp-db2html.c
+	* src/yelp-scrollkeeper.c
+	* stylesheets/Makefile.am
+	* stylesheets/yelp-custom.xsl
+	* stylesheets/yelp-customization.xsl
+	added
+	* stylesheets/yelp-functions.xsl
+	patch from Shaun McCance to address bug #114117
+
 2003-06-04  Mikael Hallendal  <micke@codefactory.se>
 
         * Release 2.3.3
