--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-13  Mikael Hallendal  <micke@imendio.com>
+
+        * *: Updated my contact information
+	
 2003-06-10 John Fleck <jfleck@inkstain.net>
 
 	* src/Makefile.am
@@ -6,9 +10,9 @@
 	* stylesheets/Makefile.am
 	* stylesheets/yelp-custom.xsl
 	* stylesheets/yelp-customization.xsl
-	added
+	  added
 	* stylesheets/yelp-functions.xsl
-	patch from Shaun McCance to address bug #114117
+	  patch from Shaun McCance to address bug #114117
 
 2003-06-04  Mikael Hallendal  <micke@codefactory.se>
 
