Updated my contact information
2003-06-13  Mikael Hallendal  <micke@imendio.com>

        * *: Updated my contact information

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-13  Mikael Hallendal  <micke@imendio.com>
+
+        * *: Updated my contact information
+	
 2003-06-05  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c: (window_about_cb): 
