--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-14  Arafat Medini <lumina@silverpen.de>
+
+	* ar.po: Updated Arabic translation.
+
 2003-06-06  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation, again.
