--- a/po/ar.po
+++ b/po/ar.po
@@ -1,64 +1,67 @@
+# translation of yelp.po to
 # translation of yelp.po to Arabic
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # Sayed Jaffer Al-Mosawi <mosawi@arabeyes.org>, 2002
+# Isam Bayazidi <bayazidi@arabeyes.org>, 2002
+# Arafat Medini <lumina@silverpen.de>, 2003
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-06-05 20:57+0200\n"
-"PO-Revision-Date: 2002-05-31 19:28-0300\n"
-"Last-Translator: Isam Bayazidi <bayazidi@arabeyes.org>\n"
-"Language-Team: Arabic <support@arabeyes.org>\n"
+"POT-Creation-Date: 2003-04-27 20:24+0200\n"
+"PO-Revision-Date: 2003-04-29 12:27+0200\n"
+"Last-Translator: Arafat Medini <lumina@silverpen.de>\n"
+"Language-Team: Arabic <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0.1\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>بحث في المستند التالي:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "_لف آلي"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "بحث عن التالي..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "مطابقة ل_كامل الكلمة"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_ تطابق الحالة العليا/السفلى"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_التالي"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_السابق"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "يلب"
+msgstr "يالب"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "مصنع يلب"
+msgstr "معاين يالب"
 
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "لا استطيع تنشيط يلب : '%s'"
+msgstr "لا استطيع تنشيط يالب: '%s'"
 
 #: src/yelp-main.c:136
 msgid "Could not open new window."
@@ -115,11 +118,11 @@ msgstr "تطوير"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "عتاد"
+msgstr "ادوات اﻻجهزة"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "ملفات تعريف"
+msgstr "ملفّات تعريف"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -133,18 +136,17 @@ msgstr "معاينات"
 msgid "System Administration"
 msgstr "مدير النظام"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
+#: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "جاري التحميل..."
 
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
+#: src/yelp-view-content.c:543 src/yelp-view-index.c:517
 msgid "Section"
 msgstr "فصل"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "بحث عن:"
+msgstr "_بحث عن:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -153,7 +155,7 @@ msgstr "محتويات المساعدة"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr "سطح مكتب - جينوم"
+msgstr "سطح مكتب - جُنوم"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
@@ -180,69 +182,68 @@ msgid "Manual pages"
 msgstr "صفحات الدليل"
 
 #: src/yelp-view-toc.c:712
-#, fuzzy
 msgid "GNOME is"
-msgstr "سطح مكتب - جينوم"
+msgstr "جُنوم هو"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr ""
+msgstr "برنامج مجاني"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
-msgstr "/ملف"
+msgstr "/م_لف"
 
 #: src/yelp-window.c:164
 msgid "/File/_New window"
-msgstr "/ملف/نافذة جديدة"
+msgstr "/ملف/نافذة جد_يدة"
 
 #: src/yelp-window.c:165
 msgid "/File/_Close window"
-msgstr "/ملف/اغلق النافذة"
+msgstr "/ملف/_اغلق النافذة"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_تحرير"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/تحرير/_بحث في الصفحة..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/تحرير/_بحث مرة أخرى..."
 
 #: src/yelp-window.c:171
 msgid "/_Go"
-msgstr "/انطلق"
+msgstr "/ان_طلق"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr "/انطلق/خلف"
+msgstr "/اذهب/_خلف"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr "/انطلق/تقديم"
+msgstr "/اذهب/تق_دّم"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr "/انطلق/منزل"
+msgstr "/اذهب/_منزل"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/انطلق/فهرس"
+msgstr "/اذهب/_فهرس"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
-msgstr "/مساعدة"
+msgstr "/_مساعدة"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/مساعدة/عن"
+msgstr "/مساعدة/ع_ن"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
@@ -251,72 +252,72 @@ msgstr "متصفح المساعدة"
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "المستند '%s' ليس موجود"
+msgstr "المستند '%s' غير موجود"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:677
+#: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "تكريم للمترجمين"
+msgstr "_تكريم للمترجمين"
 
-#: src/yelp-window.c:681
+#: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
-msgstr "متصفح المساعدة لـ جينوم 2.0"
+msgstr "متصفح المساعدة لجنوم 2.0"
 
-#: src/yelp-window.c:796
+#: src/yelp-window.c:788
 msgid "Back"
 msgstr "خلف"
 
-#: src/yelp-window.c:797
+#: src/yelp-window.c:789
 msgid "Show previous page in history"
 msgstr "اظهر الصغحة السابقة في التاريخ"
 
-#: src/yelp-window.c:808
+#: src/yelp-window.c:800
 msgid "Forward"
 msgstr "تقديم"
 
-#: src/yelp-window.c:809
+#: src/yelp-window.c:801
 msgid "Show next page in history"
 msgstr "اظهر الصفحة التالية في التاريخ"
 
-#: src/yelp-window.c:822
+#: src/yelp-window.c:814
 msgid "Home"
 msgstr "منزل"
 
-#: src/yelp-window.c:823
+#: src/yelp-window.c:815
 msgid "Go to home view"
 msgstr "انتقل الى عرض المنزل"
 
-#: src/yelp-window.c:833
+#: src/yelp-window.c:825
 msgid "Index"
 msgstr "فهرس"
 
-#: src/yelp-window.c:834
+#: src/yelp-window.c:826
 msgid "Search in the index"
 msgstr "ابحث في الفهرس"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "احصل على المساعدة مع جينوم"
+msgstr "احصل على مساعدة مع جُنوم"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "مساعدة"
 
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr ""
-#~ "حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
+msgid ""
+"Error while parsing the stylesheet, make sure you have your docbook "
+"environment setup correctly."
+msgstr "حدث خطأ أثناء إعراب صفحة النمط، تأكد من كونك نصبت بيئة docbook بشكل صحيح."
 
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "تعذر إعراب المستند '%s'."
+msgid "Couldn't parse the document '%s'."
+msgstr "تعذر إعراب المستند '%s'."
 
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "حدث خطأ أثناء تطبيق صفحة النمط."
+msgid "Error while applying the stylesheet."
+msgstr "حدث خطأ أثناء تطبيق صفحة النمط."
 
-#~ msgid "info"
-#~ msgstr "معلومة"
+msgid "info"
+msgstr "معلومة"
 
-#~ msgid "man"
-#~ msgstr "man"
+msgid "man"
+msgstr "man"
+
