--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-16  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* l10n.xml: Added Walloon, Spanish and French.
+
 2003-05-12  Abel Cheung  <maddog@linux.org.hk>
 
 	* l10n.xml: Added traditional Chinese translation.
