s/dir/directory/ Fixes #111818
2003-06-16  Alex Duggan  <aldug@astrolinux.com>

 	* src/yelp-main.c: s/dir/directory/  Fixes #111818

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-16  Alex Duggan  <aldug@astrolinux.com>
+ 
+ 	* src/yelp-main.c: s/dir/directory/  Fixes #111818
+ 
 2003-06-16  Mikael Hallendal  <micke@imendio.com>
 
 	* src/yelp-db2html.c: 
