Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -6,8 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.4.x\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-09 17:40+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-17 11:00+0200\n"
+"PO-Revision-Date: 2003-06-17 10:58+0200\n"
 "Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +56,7 @@ msgid "Yelp Factory"
 msgstr "Yelp-Fabrik"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr ""
 "Festlegen, welches Verzichnis als Zwischenspeicher verwendet werden soll"
 
@@ -139,7 +140,7 @@ msgstr "System-Administration"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr "Wird geladen..."
+msgstr "Ladevorgang..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517
 msgid "Section"
@@ -147,7 +148,7 @@ msgstr "Abschnitt"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "Suchen _nach:"
+msgstr "_Suchbegriff:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
