Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -4,9 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.3.0\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-09 19:21+0200\n"
+"Project-Id-Version: yelp 2.3.3\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-17 14:32+0200\n"
+"PO-Revision-Date: 2003-06-17 14:32+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -54,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Fàbrica de Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Defineix quin directori de memòria cau s'utilitza"
+msgid "Define which cache directory to use"
+msgstr "Defineix el directori de memòria cau a utilitzar"
 
 #: src/yelp-main.c:128
 #, c-format
