--- a/po/cs.po
+++ b/po/cs.po
@@ -6,8 +6,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-04-29 14:32+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-17 13:07+0200\n"
+"PO-Revision-Date: 2003-06-17 16:13+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +56,7 @@ msgid "Yelp Factory"
 msgstr "Generátor Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr "Definovat, který adresář cache používat"
 
 #: src/yelp-main.c:128
