Minor fixes to Czech translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2003-06-17  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
+	* cs.po: Minor fixes to Czech translation.
 
 2003-06-17  Jordi Mallach  <jordi@sindominio.net>
 
