--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2003-06-17 13:07+0200\n"
-"PO-Revision-Date: 2003-06-17 16:13+0200\n"
+"PO-Revision-Date: 2003-06-17 19:53+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,7 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>Najít v dokumentu text:</b>"
+msgstr "<b>Hledat v dokumentu text:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
@@ -29,7 +29,7 @@ msgstr "Automaticky _zalamovat"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "Najít text..."
+msgstr "Hledat text..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
@@ -139,7 +139,7 @@ msgstr "Správa systému"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr "Nahrávám..."
+msgstr "Načítám..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517
 msgid "Section"
@@ -212,11 +212,11 @@ msgstr "/Ú_pravy"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr "/Úpravy/_Najít ve stránce..."
+msgstr "/Úpravy/_Hledat ve stránce..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr "/Úpravy/Najít _další"
+msgstr "/Úpravy/Hledat _další"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
