--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-16  Eric Baudais  <drake@gnome.org>
+
+	* yelp-custom.xsl: Applied Alexander's patch for bug #100476.
+
 2003-06-16  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* l10n.xml: Added Walloon, Spanish and French.
