--- a/po/mk.po
+++ b/po/mk.po
@@ -1,23 +1,24 @@
-# translation of mk.po to Macedonian
-# translation of mk.po to
-# translation of yelp.gnome-2-2.mk.po to Macedonian
+# translation of yelp.HEAD.mk.po to 
+# translation of yelp.HEAD.mk.po to Macedonian
 # translation of yelp.HEAD.po to Macedonian
 # Yelp translated on Macedonian
 # Copyright (C) 2002,2003 Free Software Foundation, Inc.
 # Stojcev Darko <atom1c@linux.net.mk
 # http://www.linux.net.mk
-# Ivan Stojmirov <stojmir@linux.net.mk>, 2002,2003
+# Ivan Stojmirov <stojmir@linux.net.mk>, 2002
+# Igor Popovski <igor@popovski.com.mk>, 2003
 msgid ""
 msgstr ""
-"Project-Id-Version: mk\n"
-"POT-Creation-Date: 2003-06-05 20:57+0200\n"
-"PO-Revision-Date: 2003-04-16 15:05+0200\n"
-"Last-Translator: Ivan Stojmirov <stojmir@linux.net.mk>\n"
-"Language-Team: Macedonian <gnomk-main@lists.sourceforge.net>\n"
+"Project-Id-Version: yelp.HEAD.mk\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-13 21:05+0200\n"
+"PO-Revision-Date: 2003-06-15 09:41+0200\n"
+"Last-Translator: \n"
+"Language-Team:  <mk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -25,7 +26,7 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>Најди текст во документот:</b>"
+msgstr "<b>Најди текст во документот:  </b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
@@ -59,12 +60,16 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp фабрика"
 
-#: src/yelp-main.c:117
+#: src/yelp-main.c:94
+msgid "Define which cache dir to use"
+msgstr "Дефинирај кој кеш директориум да се користи"
+
+#: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Неможам да го активирам Yelp: '%s'"
+msgstr "Неможам да го активирам Yelp:  '%s'"
 
-#: src/yelp-main.c:136
+#: src/yelp-main.c:147
 msgid "Could not open new window."
 msgstr "Неможам да отворам нов прозорец."
 
@@ -147,7 +152,7 @@ msgstr "Оддел"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "_Пребарај:"
+msgstr "_Пребарај: "
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -259,45 +264,41 @@ msgstr "Документот  '%s' не постои"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:677
 msgid "translator_credits"
-msgstr ""
-"Дарко Стојчев (atom1c@linux.net.mk)\n"
-"\n"
-"Слободен Софтвер Македонија\n"
-"http://www.slobodensoftver.org.mk"
+msgstr "заслуги_на преведувачите"
 
 #: src/yelp-window.c:681
-msgid "Help Browser for GNOME 2.0"
+msgid "A Help Browser for GNOME"
 msgstr "Прелистувач на документи за помош за GNOME 2.0"
 
-#: src/yelp-window.c:796
+#: src/yelp-window.c:795
 msgid "Back"
 msgstr "Назад"
 
-#: src/yelp-window.c:797
+#: src/yelp-window.c:796
 msgid "Show previous page in history"
 msgstr "Прикажи ја претходната страна од минатите документи"
 
-#: src/yelp-window.c:808
+#: src/yelp-window.c:807
 msgid "Forward"
 msgstr "Напред"
 
-#: src/yelp-window.c:809
+#: src/yelp-window.c:808
 msgid "Show next page in history"
 msgstr "Покажи ја следната страна од минатите документи"
 
-#: src/yelp-window.c:822
+#: src/yelp-window.c:821
 msgid "Home"
 msgstr "На почеток"
 
-#: src/yelp-window.c:823
+#: src/yelp-window.c:822
 msgid "Go to home view"
 msgstr "Врати се на почетокот"
 
-#: src/yelp-window.c:833
+#: src/yelp-window.c:832
 msgid "Index"
 msgstr "Индекс"
 
-#: src/yelp-window.c:834
+#: src/yelp-window.c:833
 msgid "Search in the index"
 msgstr "Пребарај во индексот"
 
@@ -319,3 +320,4 @@ msgstr "Помош "
 
 #~ msgid "Error while applying the stylesheet."
 #~ msgstr "Се јави грешка при применување на stylesheet-от"
+
