Updated Hebrew translation.

--- a/po/he.po
+++ b/po/he.po
@@ -7,8 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-04-29 17:19+0300\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-19 21:43+0200\n"
+"PO-Revision-Date: 2003-06-20 00:55+0300\n"
 "Last-Translator: Gil 'Dolfin' Osher <dolfin@rpg.org.il>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +23,7 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>מצא מלל במסמך:</b>"
+msgstr "<b>מצא טקסט במסמך:</b>"
 
 # he.po: To check!
 #: data/ui/yelp.glade.h:3
@@ -31,7 +32,7 @@ msgstr "_גלוש סביב באופן אוטומטי"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "מצא מלל..."
+msgstr "מצא טקסט..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
@@ -58,7 +59,7 @@ msgid "Yelp Factory"
 msgstr "יצרן Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr "הגדר באיזו תיקיית מטמון להשתמש"
 
 #: src/yelp-main.c:128
@@ -105,7 +106,7 @@ msgstr "קריאות מערכת"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "פונקציות סיפרייה"
+msgstr "פונקציות ספרייה"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
@@ -265,7 +266,7 @@ msgstr ""
 "גיל אשר\n"
 "dolfin@rpg.org.il\n"
 "\n"
-"פרוייקט linBrew\n"
+"פרויקט linBrew\n"
 "http://linbrew.sourceforge.net"
 
 #: src/yelp-window.c:681
@@ -311,3 +312,4 @@ msgstr "קבל עזרה עם GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "עזרה"
+
