--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-20  Gil "Dolfin" Osher <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
 2003-06-17  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
@@ -11,14 +15,14 @@
 
 	* de.po: Updated German translation.
 
-2003-06-07  SamÃºel JÃ³n Gunnarsson  <sammi@techattack.nu>
+2003-06-07  Sam?ºel J?³n Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation
 
 2003-06-06  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
                                                                                                                                                             
         * es.po: Updated Spanish translation by
-                 Juan Manuel GarcÃ­a Molina <juanma_gm@wanadoo.es>.
+                 Juan Manuel Garc?­a Molina <juanma_gm@wanadoo.es>.
 
 2003-06-04  Abel Cheung  <maddog@linux.org.hk>
 
@@ -78,13 +82,13 @@
 2003-05-08  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation by
-                 Juan Manuel GarcÃ­a Molina <juanma_gm@wanadoo.es>
+                 Juan Manuel Garc?­a Molina <juanma_gm@wanadoo.es>
 
 2003-05-08  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
 
-2003-05-06  Danilo Â©egan  <dsegan@gmx.net>
+2003-05-06  Danilo ?©egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Added Serbian translation by 
 	http://Prevod.org/.
@@ -154,13 +158,13 @@
 2003-03-10  Christian Rose  <menthos@menthos.com>
 
 	* eo.po: Added Esperanto translation by
-	Jo?Âƒ?Â«l Brich <joel.brich@laposte.net>.
+	Jo??ƒ??«l Brich <joel.brich@laposte.net>.
 
 2003-03-08  Gil "Dolfin" Osher <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
 
-2003-02-25  Sam??Âºel J??Â³n Gunnarsson <sammi@techattack.nu>
+2003-02-25  Sam???ºel J???³n Gunnarsson <sammi@techattack.nu>
 
 	* is.po: Added Icelandic translation.
 
@@ -253,7 +257,7 @@
 
 	* vi.po: Updated Vietnamese file
 
-2003-01-18  T??Âƒ??Âµivo Leedj??Âƒ?Â¢?Â‚?Â¬rv  <toivo@linux.ee>
+2003-01-18  T???ƒ???µivo Leedj???ƒ??¢??‚??¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -422,7 +426,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm????¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -439,7 +443,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
+	* no.po: Updated Norwegian (bokm????¯??????“) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -457,10 +461,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germ???Â¯?????Â“ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ????¯??????“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc????¯??????“ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -526,7 +530,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
+	* no.po: Updated Norwegian (bokm????¯??????“) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -537,7 +541,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj????¯??????“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -597,7 +601,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj????¯??????“v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -605,14 +609,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germ???Â¯?????Â“ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ????¯??????“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc????¯??????“ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell Mar???Â¯?????Â“ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar????¯??????“ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc????¯??????“ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -663,7 +667,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
+	* no.po: Updated Norwegian (bokm????¯??????“) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -695,10 +699,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germ???Â¯?????Â“ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ????¯??????“ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc????¯??????“ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -717,13 +721,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj????¯??????“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
+	* no.po: Updated Norwegian (bokm????¯??????“) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -793,7 +797,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <toivo@linux.ee>
+2002-04-11  T-A????ƒ$)B????µivo Leedj-A????ƒ$)B???¢??‚??¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -854,7 +858,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv <toivo@linux.ee>
+2002-03-17  T-A????ƒ$)B????µivo Leedj-A????ƒ$)B???¢??‚??¬rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -874,10 +878,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A???Âƒ$)B??n Poo-Caama-A???Âƒ$)B???Â±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A????ƒ$)B??n Poo-Caama-A????ƒ$)B????±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-A???Âƒ$)B???Â­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A????ƒ$)B????­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -899,7 +903,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -933,7 +937,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
+2002-03-01  T-A????ƒ$)B????µivo Leedj-A????ƒ$)B???¢??‚??¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -950,7 +954,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
+2002-02-28  T-A????ƒ$)B????µivo Leedj-A????ƒ$)B???¢??‚??¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -981,7 +985,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-A???Âƒ$)B???Â¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A????ƒ$)B????¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -996,7 +1000,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
+2002-02-17  T-A????ƒ$)B????µivo Leedj-A????ƒ$)B???¢??‚??¬rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -1014,19 +1018,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-A???Âƒ$)B???Â³ Mar-A???Âƒ$)B???Â­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A????ƒ$)B????³ Mar-A????ƒ$)B????­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-A???Âƒ$)B???Â­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A????ƒ$)B????­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -1048,7 +1052,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -1074,7 +1078,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -1111,7 +1115,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -1138,9 +1142,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-A???Âƒ$)B???Â¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A????ƒ$)B????¶rkem Cetin.
 
-2002-01-06  Germ-A???Âƒ$)B??n Poo-Caama-A???Âƒ$)B???Â±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A????ƒ$)B??n Poo-Caama-A????ƒ$)B????±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -1158,7 +1162,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -1174,7 +1178,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
+	* no.po: Added Norwegian (bokm-A????ƒ$)B????¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -1213,7 +1217,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-A???Âƒ$)B???Â³ Mar-A???Âƒ$)B???Â­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A????ƒ$)B????³ Mar-A????ƒ$)B????­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
