Dutch translation updated by Tino Meinen.
2003-06-23  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Tino Meinen.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1,13 +1,14 @@
 # Dutch translation of Yelp.
 # Copyright © 2002 Free Software Foundation, Inc.
-# Tino Meinen <a.t.meinen@chello.nl>, 2002-2003.
+# Tino Meinen <a.t.meinen@chello.nl>, 2002, 2003
 # Ronald Hummelink <ronald@hummelink.xs4all.nl>, 2002
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-25 02:10+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-22 05:11+0200\n"
+"PO-Revision-Date: 2003-06-22 08:55+0200\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -52,11 +53,11 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Yelp-Fabriek"
+msgstr "Yelp-fabriek"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Opgeven welke cash-map moet worden gebruikt"
+msgid "Define which cache directory to use"
+msgstr "Aangeven welke map moet worden gebruikt voor tijdelijke opslag"
 
 #: src/yelp-main.c:128
 #, c-format
