Updated Danish translation.
2003-06-24  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -5,8 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-19 21:19+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-24 12:58+0200\n"
+"PO-Revision-Date: 2003-06-24 12:58+0200\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -54,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Yelp-fabrik"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Definér hvilken mappe der skal benyttes til mellemlager"
+msgid "Define which cache directory to use"
+msgstr "Definér hvilken mellemlagermappe der skal benyttes"
 
 #: src/yelp-main.c:128
 #, c-format
