Update correct italian translation for Next/Previous/Contents.
2003-06-25  Glynn Foster  <glynn.foster@sun.com>

	* stylesheets/l10n.txt: Update correct italian translation
	for Next/Previous/Contents.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-25  Glynn Foster  <glynn.foster@sun.com>
+
+	* stylesheets/l10n.txt: Update correct italian translation
+	for Next/Previous/Contents.
+
 2003-06-16  Alex Duggan  <aldug@astrolinux.com>
  
  	* src/yelp-main.c: s/dir/directory/  Fixes #111818
