--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-01-20  Glynn Foster  <glynn.foster@sun.com>
+
+	* Release 2.2.3
+
+	* configure.in: Bumped version to 2.2.3
+
+	* NEWS: Update for 2.2.3
+
 2003-06-25  Glynn Foster   <glynn.foster@sun.com>
 
 	* stylesheets/l10n.xml: Add more support for other 
