--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.2.3:
+----------------
+* New languages in stylesheets (Mike Lei)
+
+* Update translations
+  (nl, cs, ar)					(Vincent van Adrighem,
+  						 Miloslav Trmac, 
+						 Arafat Medini)
+
 Changes in 2.2.2:
 -----------------
 
