--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-25  Glynn Foster  <glynn.foster@sun.com>
+
+	* 2.3.3 version marker
+
 2003-06-14  Arafat Medini <lumina@silverpen.de>
 
 	* ar.po: Updated Arabic translation.
