Updated Welsh translation.
2003-06-28  Dafydd Harries  <daf@parnassus.ath.cx>

	* cy.po: Updated Welsh translation.

--- a/po/cy.po
+++ b/po/cy.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-31 17:01+0100\n"
+"POT-Creation-Date: 2003-06-28 02:42+0100\n"
+"PO-Revision-Date: 2003-06-28 02:44+0100\n"
 "Last-Translator: Dafydd Harries <daf@parnassus.ath.cx>\n"
 "Language-Team: Welsh <gnome-cy@pengwyn.linux.org.uk>\n"
 "MIME-Version: 1.0\n"
@@ -55,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Ffatri Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Diffinio pa storgyfeiriadur i'w ddefnyddio"
+msgid "Define which cache directory to use"
+msgstr "Diffinio pa gyfeiriadur storio i'w ddefnyddio"
 
 #: src/yelp-main.c:128
 #, c-format
