Updated French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,15 +1,16 @@
 # French translation of Yelp.
 # Copyright (C) 2002-2003 Free Software Foundation, Inc.
-# maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002.
+# maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002-2003.
 # Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002-2003.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2002.
 # Sun G11n <gnome_int_l10n@ireland.sun.com>, 2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.3.0\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-05-02 11:39+0200\n"
+"Project-Id-Version: yelp 2.3.3\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-06-29 15:35+0200\n"
+"PO-Revision-Date: 2003-06-29 15:29+0200\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +58,7 @@ msgid "Yelp Factory"
 msgstr "Fabrique Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
+msgid "Define which cache directory to use"
 msgstr "Définit le répertoire de cache à utiliser"
 
 #: src/yelp-main.c:128
