--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-29  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Jean-Michel Ardantz <jmardantz@ifrance.com>.
+
 2003-06-28  Dafydd Harries  <daf@parnassus.ath.cx>
 
 	* cy.po: Updated Welsh translation.
