Set translator_credits.
2003-06-30  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* fi.po: Set translator_credits.

--- a/po/fi.po
+++ b/po/fi.po
@@ -260,7 +260,7 @@ msgstr "Dokumentti \"%s\" ei ole olemassa"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:677
 msgid "translator_credits"
-msgstr "http://gnome-fi.sourceforge.net/"
+msgstr "Lauri Nurmi, 2003\nHenri Mannerberg, 2002-2003\n\nhttp://gnome-fi.org/"
 
 #: src/yelp-window.c:681
 #, fuzzy
