--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-30  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Set translator_credits.
+
 2003-06-29  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
