--- a/po/sq.po
+++ b/po/sq.po
@@ -4,11 +4,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.3.x\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-04-30 01:54+0200\n"
+"Project-Id-Version: yelp.HEAD\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-07-01 00:56+0200\n"
+"PO-Revision-Date: 2003-07-01 00:57+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
-"Language-Team: albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
+"Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -55,8 +56,8 @@ msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Përcakto directory e cache që duhet përdorur"
+msgid "Define which cache directory to use"
+msgstr "Përcakto kë directory të cache duhet përdorur"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -303,3 +304,4 @@ msgstr "Merr ndihmë me GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ndihmë"
+
