--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-01  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2003-06-30  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: Set translator_credits.
