Welsh to Gnome 2-2 branch.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2003-07-01  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
+
+	* cy.po: Added Welsh translation by Chris M. Jackson 
+	<chris@www.linux.org.uk>
+
 2003-06-25  Glynn Foster  <glynn.foster@sun.com>
 
-	* 2.3.3 version marker
+	* 2.2.3 version marker
 
 2003-06-14  Arafat Medini <lumina@silverpen.de>
 
