- Reworked navbar code to be cleaner and to compute previous and next
* stylesheets/yelp-customization.xsl:
* stylesheets/yelp-functions.xsl:
- Reworked navbar code to be cleaner and to compute previous and next
  links only once per chunk.  This patch incorporates the stylesheet
  changes on #115289, though slightly differently for the cleanup.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-01  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	* yelp-functions.xsl:
+	- Retooled navbar code to make it cleaner and to generate the location
+	  of previous and next links only once per node.
+
 2003-06-29  Shaun Mccance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl: Transparently thread parts when there is
