--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-02  Jordi Mallach  <jordi@sindominio.net>
+
+	* yelp.desktop.in: Add StartupNotify support.
+
 2003-06-25  Glynn Foster  <glynn.foster@sun.com>
 
 	* stylesheets/l10n.xml: Add some new languages from 
