- Insert blank <tr> when there's no previous/next link, for alignment. -
* stylesheets/yelp-customization.xsl:
- Insert blank <tr> when there's no previous/next link, for alignment.
- Make Contents not link to itself in the up link on the bottom navbar.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-02  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
+	- Insert blank <tr> when there's no previous/next link, for alignment.
+	- Make Contents not link to itself in the up link on the bottom navbar.
+
 2003-07-01  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
