--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,6 +1,16 @@
 2003-07-02  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
+	- Minor navbar fixes and tweaks.
+
+	* yelp-custom.xsl:
+	- 'Legal Notice' added as title to legalnotice iff there is no title,
+	  rather than if it's the first legalnotice.  More changes to come
+	  to fix some of the heading's spacing in the title page.
+
+2003-07-02  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-customization.xsl:
 	- Insert blank <tr> when there's no previous/next link, for alignment.
 	- Make Contents not link to itself in the up link on the bottom navbar.
 
