Updated Hungarian translation.
2003-07-05  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

--- a/po/hu.po
+++ b/po/hu.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2002-12-14 18:26+0100\n"
+"POT-Creation-Date: 2003-07-05 11:39+0200\n"
+"PO-Revision-Date: 2003-07-05 11:40+0200\n"
 "Last-Translator: Andras Timar <timar@gnome.hu>\n"
 "Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
@@ -56,8 +56,8 @@ msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "A gyorsítótár könyvtárának megadása"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -264,9 +264,8 @@ msgstr ""
 "Tímár András <timar@gnome.hu>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "A GNOME 2.0 súgóböngészője"
+msgstr "A GNOME súgóböngészője"
 
 #: src/yelp-window.c:795
 msgid "Back"
