--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-05  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2003-07-01  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
