--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,9 +5,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.0\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
-"PO-Revision-Date: 2003-01-04 02:35-0200\n"
-"Last-Translator: Gustavo Noronha Silva <kov@debian.org>\n"
+"POT-Creation-Date: 2003-07-06 22:22-0300\n"
+"PO-Revision-Date: 2003-07-06 22:22-0300\n"
+"Last-Translator: Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
 "Language-Team: GNOME-BR <gnome-l10n-br@listas.cipsga.org.br>, Brazilian "
 "Portuguese <ldp-br@bazar.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
@@ -55,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr ""
+msgid "Define which cache directory to use"
+msgstr "Definir qual diretório de cache usar"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -261,9 +261,8 @@ msgid "translator_credits"
 msgstr "Evandro Fernandes Giovanini <evandrofg@ig.com.br>"
 
 #: src/yelp-window.c:681
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "Navegador de Ajuda para o GNOME 2.0"
+msgstr "Um Navegador de Ajuda para o GNOME"
 
 #: src/yelp-window.c:795
 msgid "Back"
