--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-06-22 05:11+0200\n"
+"POT-Creation-Date: 2003-07-07 13:29+0200\n"
 "PO-Revision-Date: 2003-06-22 08:55+0200\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
@@ -270,7 +270,7 @@ msgstr "Een Hulp-browser voor GNOME"
 
 #: src/yelp-window.c:795
 msgid "Back"
-msgstr "Vorige"
+msgstr "Terug"
 
 #: src/yelp-window.c:796
 msgid "Show previous page in history"
