stylesheets/yelp-custom.xsl: Initial work on header spacing.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,4 +1,8 @@
-2003-07-07  Shaun McCacne  <shaunm@wolfram.com
+2003-07-07  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-custom.xsl: Initial work on header spacing
+
+2003-07-07  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-customization.xsl:
 	* yelp-functions.xsl:
