Updated Hungarian translation.
2003-07-08  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

--- a/po/hu.po
+++ b/po/hu.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
-"POT-Creation-Date: 2003-07-05 11:39+0200\n"
-"PO-Revision-Date: 2003-07-05 11:40+0200\n"
+"POT-Creation-Date: 2003-07-08 12:11+0200\n"
+"PO-Revision-Date: 2003-07-08 12:13+0200\n"
 "Last-Translator: Andras Timar <timar@gnome.hu>\n"
 "Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
@@ -139,7 +139,7 @@ msgstr "Rendszeradminisztráció"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr "Töltődik..."
+msgstr "Betöltés..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517
 msgid "Section"
@@ -164,11 +164,11 @@ msgstr "Egyéb dokumentumok"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr "Kézikönyvek"
+msgstr "Súgóoldalak"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
 msgid "Info Pages"
-msgstr "Info lapok"
+msgstr "Info-oldalak"
 
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
 msgid "Documents"
