--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-07-08  Anders Carlsson  <andersca@codefactory.se>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/info2html/Makefile.am:
+	* src/man2html/Makefile.am:
+	* src/yelp-reader.c: (reader_convert_start):
+	Move help readers over from libgnome.
+	
 2003-07-02  Jordi Mallach  <jordi@sindominio.net>
 
 	* yelp.desktop.in: Add StartupNotify support.
