Updated Malay translation.
2003-07-10 Hasbullah Bin Pit <sebol@ikhlas.com>

        * ms.po: Updated Malay translation.

--- a/po/ms.po
+++ b/po/ms.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
-"POT-Creation-Date: 2003-06-04 11:54+0200\n"
+"POT-Creation-Date: 2003-07-11 01:40+0800\n"
 "PO-Revision-Date: 2002-12-13 11:19+0800\n"
 "Last-Translator: Hasbullah Bin Pit <sebol@ikhlas.com>\n"
 "Language-Team: Bahasa Melayu <gabai-penyumbang@lists.sourceforge.net>\n"
@@ -55,8 +55,8 @@ msgid "Yelp Factory"
 msgstr "Kilang Yelp"
 
 #: src/yelp-main.c:94
-msgid "Define which cache dir to use"
-msgstr "Takrif direktori cache untuk digunakan"
+msgid "Define which cache directory to use"
+msgstr "Takrifkan dimana direktori cache untuk digunakan"
 
 #: src/yelp-main.c:128
 #, c-format
