--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-10 Hasbullah Bin Pit <sebol@ikhlas.com>
+                                                                                 
+        * ms.po: Updated Malay translation.
+
 2003-07-08  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
