--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-10  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-functions.xsl: Only link Previous and Next to divisions
+	  that have the id attribute.  Yelp and SK currently arent'
+	  capable of working with id-less divisions, so we shouldn't
+	  link to them with Previous and Next.
+
 2003-07-07  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-custom.xsl: Initial work on header spacing
