--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-11  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-custom.xsl: Put xsl: prefix on use-attribute-sets,
+	  so it'll actually work.
+
 2003-07-10  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-functions.xsl: Only link Previous and Next to divisions
