Unification of terminology and hotkeys

--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2003-07-08 12:11+0200\n"
-"PO-Revision-Date: 2003-07-11 12:40+0200\n"
+"PO-Revision-Date: 2003-07-12 23:21+0200\n"
 "Last-Translator: Andras Timar <timar@gnome.hu>\n"
 "Language-Team: Hungarian <hu@gnome.hu>\n"
 "MIME-Version: 1.0\n"
@@ -180,7 +180,7 @@ msgstr "Kategóriák"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
-msgstr "Kézikönyvek"
+msgstr "Súgóoldalak"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
