--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-15  Shaun McCance  <shaunm@wolfram.com>
+
+	* yelp-functions.xsl: Speed improvement
+
 2003-07-11  Shaun McCance  <shaunm@wolfram.com>
 
 	* yelp-custom.xsl: Put xsl: prefix on use-attribute-sets,
