--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-15 John Fleck <jfleck@inkstain.net>
+
+	* configure.in: version 2.3.4
+
 2003-07-08  Anders Carlsson  <andersca@codefactory.se>
 
 	* configure.in:
