--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 2.3.4:
+-----------------
+
+* move man and info help converters into Yelp	(Anders Carlsson
+* add StarupNotify support			(Jordi Mallach)
+* additional language support for stylesheets	(Glynn foster, Mike Lei)
+* improve style guide compliance		(Alex Duggan)
+* better warning if document does not exist	(Mikael Hallendal)
+* truly massive stylesheet improvements		(Shaun McCance)
+
+
 Changes in 2.3.3:
 -----------------
 * About window fixes                            (Alex Duggan, Steven Chaplin)
